# protogens-bot

./: Cargo.toml  config.json
src/: data.rs  db.rs  furaffinity.rs  main.rs
