[package]
name = "discordtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"] }
serenity = "0.10.10"
reqwest = { version = "0.11.10", features = ["cookies"] }
soup = "0.5.1"
tokio-postgres = "0.7.5"
serde_json = "1.0.79"
serde = "1.0.136"